<resources>
    <string name="app_name">Chatify</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="registration">Sign up</string>
    <string name="name">Name</string>
    <string name="confirm_email">Confirm email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="empty_name">Name cannot be empty!</string>
    <string name="empty_email">Email cannot be empty!</string>
    <string name="empty_password">Password cannot be empty!</string>
    <string name="emails_not_matches">Email not matches</string>
    <string name="passwords_not_matches">Passwords not matches</string>
    <string name="reset_pw">Reset password</string>
    <string name="facebook_app_id">631145158249510</string>
    <string name="fb_login_protocol_scheme">fb631145158249510</string>
    <string name="delete_profile">Delete profile</string>
    <string name="change_picture">Change picture</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_question">Your profile will be permanently deleted. Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="signout_question">Are you sure you want to sign out?</string>
    <string name="chats">Chats</string>
    <string name="people">People</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="if_you_don_t_have_account_just_sign_up">If you do not have account, just sign up</string>
    <string name="choose">Choose</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="image">Image</string>
    <string name="gallery">Gallery</string>
    <string-array name="Colors">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>
</resources>