<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:colorBackground">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civProfilePicture"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="128dp"
        android:src="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChangeProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingVertical="10dp"
        android:text="@string/change_picture"
        android:backgroundTint="?android:colorBackground"
        android:textColor="?android:textColorPrimary"
        app:strokeColor="@color/app_color"
        app:strokeWidth="2dp"
        android:textSize="14sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civProfilePicture" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_out"
        android:textSize="18sp"
        android:textColor="?android:textColorSecondary"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnDeleteProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:backgroundTint="?android:colorBackground"
        android:textColor="@color/red"
        android:text="@string/delete_profile"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pbProfile"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/app_color"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnSignOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeProfilePicture" />

</androidx.constraintlayout.widget.ConstraintLayout>