<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnPrimary"
    tools:context=".ui.signup.SignUpFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="fitCenter"
        android:padding="15dp"
        android:src="@mipmap/ic_logo_round"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textColorHint="@color/app_color"
        android:textColor="?android:textColorSecondary"
        android:hint="@string/name"
        app:boxStrokeColor="@color/app_color"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="?colorOnPrimary"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/app_color"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:errorIconTint="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietName"
            android:textColorHint="@color/app_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHighlight="#8FC391"
            android:inputType="textCapWords"
            android:paddingStart="25dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/email"
        android:textColorHint="@color/app_color"
        android:textColor = "?android:textColorSecondary"
        app:boxStrokeColor="@color/app_color"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="?colorOnPrimary"
        app:endIconMode="clear_text"
        app:endIconTint="@color/app_color"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:errorIconTint="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/tilName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHighlight="#8FC391"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/confirm_email"
        android:textColorHint="@color/app_color"
        android:textColor = "?android:textColorSecondary"
        app:boxStrokeColor="@color/app_color"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="?colorOnPrimary"
        app:endIconMode="clear_text"
        app:endIconTint="@color/app_color"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:errorIconTint="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietConfirmEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/app_color"
            android:textColorHighlight="#8FC391"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/password"
        android:textColorHint="@color/app_color"
        android:textColor = "?android:textColorSecondary"
        app:boxStrokeColor="@color/app_color"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="?colorOnPrimary"
        app:endIconMode="clear_text"
        app:endIconTint="@color/app_color"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:errorIconTint="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHighlight="#8FC391"
            android:paddingStart="25dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/app_color"
        android:textColor="?android:textColorSecondary"
        app:boxStrokeColor="@color/app_color"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="?colorOnPrimary"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/app_color"
        app:endIconCheckable="true"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:errorIconTint="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietConfirmPassword"
            android:textColorHint="@color/app_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHighlight="#8FC391"
            android:inputType="textPassword"
            android:paddingStart="25dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/pbSignUp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/app_color"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="40dp"
        android:paddingVertical="10dp"
        android:textColor="?android:textColorSecondary"
        android:text="@string/registration"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>