<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:scaleType="fitCenter"
            android:padding="15dp"
            android:src="@mipmap/ic_logo_round"
            tools:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/email"
            android:textColorHint="@color/app_color"
            app:boxStrokeColor="@color/app_color"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundColor="?colorOnPrimary"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/app_color"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:errorIconTint="@color/red"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:paddingStart="25dp"
                android:textColorHighlight="#8FC391" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/password"
            android:textColorHint="@color/app_color"
            app:boxStrokeColor="@color/app_color"
            app:boxBackgroundColor="?colorOnPrimary"
            app:boxStrokeWidth="2dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/app_color"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:errorIconTint="@color/red"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingStart="25dp"
                android:textColorHighlight="#8FC391"
                app:layout_constraintTop_toBottomOf="@+id/tilUsername" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:textSize="18sp"
            android:paddingVertical="10dp"
            android:text="@string/sign_in"
            android:textColor="?android:textColorSecondary"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

        <Button
            android:id="@+id/btnForgot"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Forgot your password?"
            android:textColor="#357CFF"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="end|center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="96dp"
            android:backgroundTint="?colorOnPrimary"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingVertical="10dp"
            android:textColor="?android:textColorPrimary"
            app:cornerRadius="50dp"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/white"
            app:iconTintMode="multiply"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:strokeColor="@color/app_color"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFacebook"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="end|center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="96dp"
            android:backgroundTint="?colorOnPrimary"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingVertical="10dp"
            android:textColor="?android:textColorPrimary"
            app:cornerRadius="50dp"
            app:icon="@drawable/ic_facebook"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/white"
            app:iconTintMode="multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:strokeColor="@color/app_color"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="If you don't have account, just sign up"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
            app:layout_constraintVertical_bias="0.7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:paddingVertical="10dp"
            android:backgroundTint="?colorOnPrimary"
            android:textColor="?android:textColorPrimary"
            app:strokeWidth="2dp"
            app:strokeColor="@color/app_color"
            android:text="@string/registration"
            android:textSize="18sp"
            app:cornerRadius="30dp"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
            app:layout_constraintVertical_bias="0.7" />

        <ProgressBar
            android:id="@+id/pbLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/app_color"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tvSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>